ProRob/src/package_master/log/build_2025-01-14_10-04-26/package_master/stderr.log
  File "/home/rouillon/ProRob/src/package_master/install/package_master/lib/python3.10/site-packages/package_master/client_member_function.py", line 4
    rom package_master.msg import Num
        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax

